# mapindata-sdk

./: .env.example  .gitignore  LICENSE  README.md  conftest.py  pyproject.toml  try_istanbul.py
docs/: development-history.md  footfall-engine.md  future-features.md  geo-utils.md  kodlama-standartlari.md
src/mapindata/: __init__.py
src/mapindata/analytics/: __init__.py
src/mapindata/core/: __init__.py  config.py  geo_utils.py
src/mapindata/data/: __init__.py  duckdb_client.py  s3_client.py
src/mapindata/mobility/: __init__.py  footfall_engine.py
src/mapindata/scraping/: __init__.py
src/mapindata/viz/: __init__.py
tests/: __init__.py
tests/analytics/: __init__.py  test_litre_estimator.py  test_scorer.py
tests/core/: __init__.py  test_config.py  test_geo_utils.py
tests/data/: test_s3_client.py
tests/mobility/: __init__.py  test_footfall_engine.py
